// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CloseIcon when render with no additional props should match snapshot for error 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  margin-right: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  border: none;
}

.c0 .icon-close:before {
  color: #C7384F;
}

.c0 .message__close-icon:focus {
  outline: none;
  background-color: #FFFFFF;
}

.c0 .message__close-icon:focus span span:before {
  outline: 2px solid #FFDA7F;
  outline-offset: 3px;
}

<div
  className="c0"
/>
`;

exports[`CloseIcon when render with no additional props should match snapshot for info 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  margin-right: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  border: none;
}

.c0 .icon-close:before {
  color: #0073C2;
}

.c0 .message__close-icon:focus {
  outline: none;
  background-color: #FFFFFF;
}

.c0 .message__close-icon:focus span span:before {
  outline: 2px solid #FFDA7F;
  outline-offset: 3px;
}

<div
  className="c0"
/>
`;

exports[`CloseIcon when render with no additional props should match snapshot for success 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  margin-right: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  border: none;
}

.c0 .icon-close:before {
  color: #00B000;
}

.c0 .message__close-icon:focus {
  outline: none;
  background-color: #FFFFFF;
}

.c0 .message__close-icon:focus span span:before {
  outline: 2px solid #FFDA7F;
  outline-offset: 3px;
}

<div
  className="c0"
/>
`;

exports[`CloseIcon when render with no additional props should match snapshot for warning 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  margin-right: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  border: none;
}

.c0 .icon-close:before {
  color: #E96400;
}

.c0 .message__close-icon:focus {
  outline: none;
  background-color: #FFFFFF;
}

.c0 .message__close-icon:focus span span:before {
  outline: 2px solid #FFDA7F;
  outline-offset: 3px;
}

<div
  className="c0"
/>
`;

exports[`LinkStyle applies peoper styling when focused 1`] = `
.c0 {
  display: inline-block;
}

.c0 a {
  font-size: 14px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #26A826;
}

.c0 a:hover {
  cursor: pointer;
  color: #006300;
}

.c0 a:focus {
  color: rgba(0,0,0,0.9);
  cursor: default;
  background-color: #FFDA7F;
  outline: none;
}

.c1 .carbon-link__content {
  display: none;
}

.c1 .carbon-link__icon {
  margin-right: 0;
}

<div
  className="c0"
  data-component="link"
  disabled={false}
>
  <a
    className="c1"
    data-component="link"
    onKeyDown={[Function]}
    tabIndex="0"
  >
    <span>
      <span
        className="carbon-link__content"
      />
    </span>
  </a>
</div>
`;

exports[`when in classic mode when rendered as default should match the snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  margin-right: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  border: none;
  background-color: #335c6d;
}

<div
  className="c0"
/>
`;

exports[`when in classic mode when rendered as default when transparent prop is set to true should apply white color background 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  margin-right: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  border: none;
  background-color: #335c6d;
  background-color: #FFFFFF;
}

<div
  className="c0"
/>
`;

exports[`when in classic mode when rendered as error should match the snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  margin-right: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  border: none;
  background-color: #fdf5f5;
}

.c0 .icon-close:before {
  color: #C7384F;
}

<div
  className="c0"
/>
`;

exports[`when in classic mode when rendered as error when transparent prop is set to true should apply white color background 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  margin-right: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  border: none;
  background-color: #fdf5f5;
  background-color: #FFFFFF;
}

.c0 .icon-close:before {
  color: #C7384F;
}

<div
  className="c0"
/>
`;

exports[`when in classic mode when rendered as help should match the snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  margin-right: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  border: none;
  background-color: #fffbf2;
}

<div
  className="c0"
/>
`;

exports[`when in classic mode when rendered as help when transparent prop is set to true should apply white color background 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  margin-right: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  border: none;
  background-color: #fffbf2;
  background-color: #FFFFFF;
}

<div
  className="c0"
/>
`;

exports[`when in classic mode when rendered as info should match the snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  margin-right: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  border: none;
  background-color: #f3f8fe;
}

.c0 .icon-close:before {
  color: #0073C2;
}

<div
  className="c0"
/>
`;

exports[`when in classic mode when rendered as info when transparent prop is set to true should apply white color background 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  margin-right: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  border: none;
  background-color: #f3f8fe;
  background-color: #FFFFFF;
}

.c0 .icon-close:before {
  color: #0073C2;
}

<div
  className="c0"
/>
`;

exports[`when in classic mode when rendered as maintenance should match the snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  margin-right: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  border: none;
  background-color: #fff8f2;
}

<div
  className="c0"
/>
`;

exports[`when in classic mode when rendered as maintenance when transparent prop is set to true should apply white color background 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  margin-right: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  border: none;
  background-color: #fff8f2;
  background-color: #FFFFFF;
}

<div
  className="c0"
/>
`;

exports[`when in classic mode when rendered as new should match the snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  margin-right: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  border: none;
  background-color: #f7f5fa;
}

<div
  className="c0"
/>
`;

exports[`when in classic mode when rendered as new when transparent prop is set to true should apply white color background 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  margin-right: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  border: none;
  background-color: #f7f5fa;
  background-color: #FFFFFF;
}

<div
  className="c0"
/>
`;

exports[`when in classic mode when rendered as success should match the snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  margin-right: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  border: none;
  background-color: #f6fbf6;
}

.c0 .icon-close:before {
  color: #00B000;
}

<div
  className="c0"
/>
`;

exports[`when in classic mode when rendered as success when transparent prop is set to true should apply white color background 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  margin-right: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  border: none;
  background-color: #f6fbf6;
  background-color: #FFFFFF;
}

.c0 .icon-close:before {
  color: #00B000;
}

<div
  className="c0"
/>
`;

exports[`when in classic mode when rendered as warning should match the snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  margin-right: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  border: none;
  background-color: #fff8f2;
}

.c0 .icon-close:before {
  color: #E96400;
}

<div
  className="c0"
/>
`;

exports[`when in classic mode when rendered as warning when transparent prop is set to true should apply white color background 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  margin-right: 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  border: none;
  background-color: #fff8f2;
  background-color: #FFFFFF;
}

.c0 .icon-close:before {
  color: #E96400;
}

<div
  className="c0"
/>
`;
